Реализованы функции start_pair и stop_pair
