# config/routes.rb
@@ -3,11 +3,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     get 'health_check', to: 'api#health_check'
-    get 'restart', to: 'api#restart'
-    get 'start_pair', to: 'api#start_pair'
-  end
-
-  namespace :test do
-    post 'health_check', to: 'api#test_health_check'
+    put 'start_pair', to: 'api#start_pair'
+    put 'stop_pair', to: 'api#stop_pair'
   end
 end
